# XashMS

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  docker-compose.yml  vcpkg.json
cmake/: PlatformNaming.cmake
sources/: admin_challenge.h  admin_command_handler.cpp  admin_command_handler.h  application.cpp  application.h  binary_input_stream.cpp  binary_input_stream.h  binary_output_stream.cpp  binary_output_stream.h  build.h  build_info.h  config_data.cpp  config_data.h  config_manager.cpp  config_manager.h  event_loop.cpp  event_loop.h  infostring_data.cpp  infostring_data.h  libevent_wrappers.cpp  libevent_wrappers.h  main.cpp  master_protocol.h  net_address.cpp  net_address.h  request_handler.cpp  request_handler.h  server_entry.cpp  server_entry.h  server_list.cpp  server_list.h  socket.cpp  socket.h  timer.cpp  timer.h  utils.cpp  utils.h  version_info.cpp  version_info.h
sources/packet_types/: admin_challenge_request.h  admin_challenge_response.cpp  admin_challenge_response.h  admin_command_request.cpp  admin_command_request.h  client_query_request.cpp  client_query_request.h  client_query_response.cpp  client_query_response.h  server_append_request.cpp  server_append_request.h  server_challenge_request.cpp  server_challenge_response.cpp  server_challenge_response.h  server_nat_announce.cpp  server_nat_announce.h
sources/request_types/: client_query_request.cpp  client_query_request.h  server_append_request.cpp  server_append_request.h  server_challenge_request.h
